--- a/source/design/index.css
+++ b/source/design/index.css
@@ -12,7 +12,7 @@
   --fs2: 2.7rem;
   --fs3: 3.6rem;
   --fs4: 5.4rem;
-  --mono: "SF Mono", "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  --mono: "SFMono-Regular", "SF Mono", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   --expanded: 'lunchtype24expanded_regular',  -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
@@ -55,31 +55,142 @@ header canvas {
   bottom: 0;
 }
 
-.fadein { 
-  animation: 2s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0s 1 fadeIn;
-}
+/**
+ * entry
+ */
 
-.slidein { 
-  animation: 2s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0s 1 slideIn;
-}
-
-footer {
-  background: var(--foreground);
-  color: var(--grey50);
-  font-family: var(--mono);
-  display: block;
-  padding: 2rem 2rem 10rem;
-  font-size: 1.2rem;
-  text-transform: uppercase;
+.container-entry {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  min-height: 100vh;
 }
 
-footer > div { text-align: center }
+.container-entry > :first-child {
+  position: relative;
+  flex: 1;
+}
 
-footer a {
-  color: var(--grey75);
+.content-entry {
+  position: relative;
+  margin: 0 auto;
+  max-width: 120rem;
+}
+
+/* video */
+
+.content-entry-video {
+  background: #000;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-entry-video nav {
+  line-height: var(--fs2);
+  background: var(--blue);
+  font-size: var(--fs2);
+  padding: 2rem 4rem;
+}
+
+.content-entry-video nav a {
+  color: inherit;
+  font-family: var(--mono);
+  text-decoration: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2rem 3rem;
+}
+
+.content-entry-video nav a span { display: none; vertical-align: top; font-size: var(--fs1); }
+.content-entry-video nav a:hover span { display: inline-block }
+
+.content-entry-video h2 {
+  font-size: inherit;
+  text-align: center;
+}
+
+.media-entry-video {
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.media-entry-video-thumbnail {
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  font-size: 20vw;
+  font-family: var(--expanded);
+  -moz-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
+  -moz-text-stroke-color: #fff;
+  -webkit-text-stroke-color: #fff;
+  -moz-text-stroke-width: 1px;  
+  -webkit-text-stroke-width: 1px;
+}
+
+.media-entry-video video {
+  display: block;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.media-entry-video .non-p2p {
+  background: rgba(0, 0, 0, 0.8);
+  font-size: var(--fs2);
+  color: var(--foreground);
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 8;
+}
+
+.media-entry-video .non-p2p-links {
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-family: var(--mono);
+  margin: 2rem 4rem;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9;
+}
+
+.media-entry-video .non-p2p-links a {
+  color: var(--foreground);
   text-decoration: none;
 }
+
+/**
+ * copy
+ */
 
 h1 {
   color: #fff;
@@ -89,38 +200,8 @@ h1 {
   margin-bottom: 1rem;
 }
 
-.colors {
-  display: flex;
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0.75rem;
-  z-index: 3;
-}
-
-.colors > div {
-  border-radius: 0.5rem;
-  margin: 0.25rem;
-  height: 1rem;
-  width: 1rem;
-}
-
-.colors > div:nth-child(2) { background: #fff }
-.colors > div:nth-child(1) { background: var(--foreground) }
-.colors > div:nth-child(3) { background: var(--background) }
-.colors > div:nth-child(4) { background: var(--blue) }
-.colors > div:nth-child(5) { background: var(--yellow) }
-.colors > div:nth-child(6) { background: var(--green) }
-.colors > div:nth-child(7) { background: var(--red) }
-
-header svg {
-  position: relative;
-  z-index: 2;
-}
-
 h2 {
-  color: var(--blue);
-  font-size: var(--fs3);
+  font-size: 6.5vw;
 }
 
 h3 {
@@ -154,6 +235,38 @@ p del:after {
   width: 100%;
 }
 
+/**
+ * colors
+ */
+
+.colors {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.75rem;
+  z-index: 3;
+}
+
+.colors > div {
+  border-radius: 0.5rem;
+  margin: 0.25rem;
+  height: 1rem;
+  width: 1rem;
+}
+
+.colors > div:nth-child(2) { background: #fff }
+.colors > div:nth-child(1) { background: var(--foreground) }
+.colors > div:nth-child(3) { background: var(--background) }
+.colors > div:nth-child(4) { background: var(--blue) }
+.colors > div:nth-child(5) { background: var(--yellow) }
+.colors > div:nth-child(6) { background: var(--green) }
+.colors > div:nth-child(7) { background: var(--red) }
+
+header svg {
+  position: relative;
+  z-index: 2;
+}
 nav.action-bar {
   margin: 2.5rem;
   text-align: center;
@@ -331,6 +444,7 @@ section.featured {
 
 .log-featured {
   background: var(--blue);
+  position: relative;
 }
 
 .p2p-web {
@@ -385,14 +499,6 @@ section.featured {
  */
 
 @media (min-width: 767px) {
-  footer {
-    display: flex;
-    padding: 4rem;
-  }
-
-  footer > div:nth-child(1) { text-align: left }
-  footer > div:nth-child(2) { text-align: right }
-
   section.subtitle {
     padding: 8rem 6rem;
   }
@@ -411,6 +517,10 @@ section.featured {
     transform: perspective(100vmin) rotate(0.0001deg) rotate3d(calc(var(--unity)), calc(-1 * var(--unitx)), 0, calc(7.5deg * var(--unit))) translate3d(0, 0, calc(25vmin * var(--unit) * -1));
   }
 }
+
+/**
+ * typography
+ */
 
 @font-face {
   font-family: 'lunchtype22regular';
